--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "axios": "^1.1.2",
-    "cheerio": "^1.0.0-rc.12"
+    "bree": "^9.1.2",
+    "cheerio": "^1.0.0-rc.12",
+    "dotenv": "^16.0.3"
   }
 }
